--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.6",
     "sqlite3": "^5.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Neehan/hackmit2020.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Neehan/hackmit2020/issues"
+  },
+  "homepage": "https://github.com/Neehan/hackmit2020#readme"
 }
