--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.6",
+    "pg": "^8.3.3",
+    "pg-hstore": "^2.3.3",
     "sqlite3": "^5.0.0"
   },
   "repository": {
